feat(harness): migrate snapshot query read model to final PostgreSQL
Add final-schema query mappers and derived thread status for Session/Thread/
Entry path/Input/Model/Tool/open Interaction. Remove query-path dependencies
on MysqlHarnessSessionStore and ThreadEvent history tables; RootActivity now
projects session tree status without event history.